flux/infrastructure/velero/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: velero
  labels:
    app.kubernetes.io/name: velero
    app.kubernetes.io/part-of: beck-cloud
    app.kubernetes.io/managed-by: flux
